--- a/index.html
+++ b/index.html
@@ -4,17 +4,18 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>In Memory of Hosea Chihota</title>
+
     <style>
         body {
             font-family: Arial, sans-serif;
             background: #f4f4f4;
-            text-align: center;
             padding: 40px;
+            line-height: 1.7;
         }
         .container {
             background: white;
             padding: 30px;
-            max-width: 600px;
+            max-width: 900px;
             margin: auto;
             border-radius: 10px;
             box-shadow: 0 0 10px rgba(0,0,0,0.1);
@@ -22,22 +23,120 @@
         img {
             max-width: 100%;
             border-radius: 10px;
-            margin-bottom: 20px;
+            margin: 20px 0;
+        }
+        h1, h2, h3 {
+            text-align: center;
+            margin-top: 40px;
         }
         p {
             font-size: 18px;
-            color: #444;
+            color: #333;
+        }
+        .photo-placeholder {
+            background: #ddd;
+            padding: 30px;
+            margin: 20px 0;
+            text-align: center;
+            border-radius: 10px;
+            font-style: italic;
         }
     </style>
 </head>
+
 <body>
     <div class="container">
-        <img src="hosea-chihota-photo.png" alt="Hosea Chihota">
-        <h2>History Coming Soon</h2>
-        <p>
-            A full biography, timeline, and family photos of Hosea Chihota 
-            will be added here soon. This page is being prepared for the unveiling ceremony.
-        </p>
+
+        <h1>Chihota Family Lineage</h1>
+
+        <p><strong>Chiremba (Murengwe / Isaac)</strong> was the father of <strong>David</strong> and his brothers <strong>Jonas</strong> and <strong>Mugoniwa</strong>, whose mother was <strong>Hana</strong>.</p>
+
+        <p><strong>Mugoniwa</strong> was the father of <strong>Josias</strong>, <strong>Philip</strong>, and <strong>Benjamin</strong>, and their sister was <strong>Esther</strong>.</p>
+
+        <p><strong>Jonas (Murambi)</strong> was the father of <strong>Manase</strong>, <strong>Simon</strong>, and <strong>Albert</strong>, and their sisters were <strong>Mary</strong>, <strong>Anny</strong>, and <strong>Mirika</strong>.</p>
+
+        <p><strong>David (Tirivai)</strong> was the father of <strong>Hosea</strong> and his brothers <strong>Heveniza</strong> and <strong>Hakishi</strong>, whose mother was <strong>Chuma</strong>.</p>
+
+        <p><strong>Hosea</strong> was the father of <strong>David</strong> and <strong>Elisha</strong>, and their sisters were <strong>Mazvirasa</strong>, <strong>Ekenia</strong>, <strong>Matilda</strong>, <strong>Peggy</strong>, and <strong>Tsitsi</strong>.</p>
+
+        <div class="photo-placeholder">[photo here]</div>
+
+        <h2>Background</h2>
+
+        <p><strong>Chiremba (Isaac / Murengwe)</strong> was a traditional healer who settled in the Epworth area (formerly Chinamano). He had originally come to heal the local leader <strong>Chiriusa</strong>, whose home was near present-day Jaggers Msasa.</p>
+
+        <p>In 1891, Methodist missionaries arrived in Chinamano, and Chiremba became the <strong>first recorded person in Zimbabwe to convert to Methodism</strong>.</p>
+
+        <div class="photo-placeholder">[photo here]<br>Image of Chiremba and his family</div>
+
+        <p>His two sons <strong>David / Tirivai</strong> and <strong>Mugoniwa</strong> passed away during the influenza pandemic between 1915 and 1918. Their brother <strong>Jonas / Marimbi</strong> took in their children and relocated to Seke, where Chief Seke granted them land.</p>
+
+        <p>This land became present-day <strong>Jonas / Marimbi Village</strong>, where Jonas established the <strong>Jonas Methodist Church</strong> and <strong>Jonas Primary School</strong>.</p>
+
+        <p>The children taken to Seke were: <strong>Heveniza</strong>, <strong>Hosea</strong>, <strong>Hakishi</strong>, <strong>Josias</strong>, <strong>Philip</strong>, <strong>Esther</strong>, and <strong>Benjamin</strong>.</p>
+
+        <h2>Hosea’s Life and Marriage</h2>
+
+        <p>Hosea grew up in Jonas Village and often travelled to Epworth to visit relatives. He worked as a <strong>tinsmith</strong>, <strong>builder</strong>, and <strong>tricycle repairer</strong>. His craftsmanship benefited the community, and he went on to train his nephews and other locals.</p>
+
+        <div class="photo-placeholder">[photo here]<br>Image of Hosea Chihota</div>
+
+        <p>He later worked for the <strong>Rhodesia Post Office</strong> as a bicycle mechanic, repairing bicycles used by postmen across the region.</p>
+
+        <p>In the 1930s, he met his wife <strong>Sarah Chitsvatsva</strong> from Chitsvatsva Village in Seke.</p>
+
+        <div class="photo-placeholder">[photo here]<br>Image of Sarah Chihota</div>
+
+        <p>Their first daughter <strong>Mazvirasa</strong> passed away at a young age. They later had six more children: <strong>Ekenia</strong>, <strong>Matilda</strong>, <strong>David</strong>, <strong>Elisha</strong>, <strong>Peggy</strong>, and <strong>Tsitsi</strong>.</p>
+
+        <h2>Descendants of Hosea and Sarah</h2>
+
+        <h3>Ekenia (Born 1933)</h3>
+        <p>Mother of <strong>Mejury</strong>, <strong>Raphael and Gabriel (twins)</strong>, <strong>Sarah (Jnr)</strong>, <strong>Chipo</strong>, <strong>Thandiwe</strong>, and <strong>Osward</strong>.</p>
+        <div class="photo-placeholder">[photo here]</div>
+
+        <h3>Matilda (Born 1936)</h3>
+        <p>Mother of <strong>Sinikiwe</strong>, <strong>Shepard</strong>, <strong>Bessy</strong>, <strong>David (Jnr)</strong>, and <strong>Absolom</strong> (twin).</p>
+        <div class="photo-placeholder">[photo here]</div>
+
+        <h3>David (Born 1942)</h3>
+        <p>Father of <strong>Collen</strong>.</p>
+        <div class="photo-placeholder">[photo here]</div>
+
+        <h3>Elisha (Born 1945)</h3>
+        <p>Married to <strong>Betty Chihota (née Tendayi)</strong>. Their children: <strong>Grenny</strong>, <strong>Hosea Jnr</strong>, <strong>Lyda</strong>, <strong>Caroline</strong>, <strong>Tariro</strong>, <strong>Ishmael</strong>, and <strong>Takunda</strong>.</p>
+        <div class="photo-placeholder">[photo here]</div>
+
+        <h3>Peggy (Born 1947)</h3>
+        <p>Mother of <strong>Susan</strong>, <strong>Thomas</strong>, <strong>Allen</strong>, <strong>Memory</strong>, and <strong>Kundai</strong>.</p>
+
+        <h3>Tsitsi (Born 19..)</h3>
+        <p>Mother of <strong>Nyaradzai</strong>, <strong>Tarisai</strong>, <strong>Muneripi</strong>, <strong>Taurai</strong>, <strong>Simbisairudo</strong>, <strong>Tafaraneyi</strong>, and <strong>Anesu</strong>.</p>
+
+        <h2>Hosea & Sarah Family Pictures</h2>
+
+        <div class="photo-placeholder">[photo here]<br>(Front) Peggy, Elisha, Ekenia<br>(Back) Marakia, Matilda</div>
+
+        <div class="photo-placeholder">[photo here]<br>Peggy, David, Matilda and grandchildren</div>
+
+        <div class="photo-placeholder">[photo here]</div>
+        <div class="photo-placeholder">[photo here]</div>
+        <div class="photo-placeholder">[photo here]</div>
+        <div class="photo-placeholder">[photo here]</div>
+        <div class="photo-placeholder">[photo here]</div>
+
+        <h2>In Memory of Chirembe</h2>
+
+        <div class="photo-placeholder">[photo here]</div>
+        <div class="photo-placeholder">[photo here]</div>
+
+        <h3>Tombstone for Isaac Murengwe Chihota (“Chiremba”)</h3>
+
+        <div class="photo-placeholder">[photo here]</div>
+
+        <p><strong>Image:</strong> Reverend Mudenda (Methodist Church) and Chiremba’s great-grandchild <strong>Tawananyasha Chihota</strong> lighting a candle in remembrance of Isaac Murengwe Chihota.  
+        The celebration marked <strong>100 years since his passing</strong>, with family gathering from far and wide for the unveiling of the tombstone.</p>
+
     </div>
 </body>
 </html>
