--- a/index.html
+++ b/index.html
@@ -59,15 +59,19 @@
 
         <p><strong>Hosea</strong> was the father of <strong>David</strong> and <strong>Elisha</strong>, and their sisters were <strong>Mazvirasa</strong>, <strong>Ekenia</strong>, <strong>Matilda</strong>, <strong>Peggy</strong>, and <strong>Tsitsi</strong>.</p>
 
-        <div class="photo-placeholder">[photo here]</div>
+        <img src="chihota-family-tree.png" alt="Chihota Family Tree">
 
         <h2>Background</h2>
 
         <p><strong>Chiremba (Isaac / Murengwe)</strong> was a traditional healer who settled in the Epworth area (formerly Chinamano). He had originally come to heal the local leader <strong>Chiriusa</strong>, whose home was near present-day Jaggers Msasa.</p>
 
         <p>In 1891, Methodist missionaries arrived in Chinamano, and Chiremba became the <strong>first recorded person in Zimbabwe to convert to Methodism</strong>.</p>
-
-        <div class="photo-placeholder">[photo here]<br>Image of Chiremba and his family</div>
+        
+        <div class="photo-placeholder">
+            <img src="chiremba-and-family.png" alt="Chiremba and his family">
+            <br>
+            Image of Chiremba and his family
+        </div>
 
         <p>His two sons <strong>David / Tirivai</strong> and <strong>Mugoniwa</strong> passed away during the influenza pandemic between 1915 and 1918. Their brother <strong>Jonas / Marimbi</strong> took in their children and relocated to Seke, where Chief Seke granted them land.</p>
 
@@ -79,13 +83,21 @@
 
         <p>Hosea grew up in Jonas Village and often travelled to Epworth to visit relatives. He worked as a <strong>tinsmith</strong>, <strong>builder</strong>, and <strong>tricycle repairer</strong>. His craftsmanship benefited the community, and he went on to train his nephews and other locals.</p>
 
-        <div class="photo-placeholder">[photo here]<br>Image of Hosea Chihota</div>
+        <div class="photo-placeholder">
+            <img src="hosea-chihota-photo.png" alt="Hosea Chihota">
+            <br>
+            Image of Hosea Chihota
+        </div>
+
 
         <p>He later worked for the <strong>Rhodesia Post Office</strong> as a bicycle mechanic, repairing bicycles used by postmen across the region.</p>
 
         <p>In the 1930s, he met his wife <strong>Sarah Chitsvatsva</strong> from Chitsvatsva Village in Seke.</p>
 
-        <div class="photo-placeholder">[photo here]<br>Image of Sarah Chihota</div>
+        <div class="photo-placeholder">
+            <img src="sarah-chihota.png" alt="Sarah Chihota">
+            <br>Image of Sarah Chihota
+        </div>
 
         <p>Their first daughter <strong>Mazvirasa</strong> passed away at a young age. They later had six more children: <strong>Ekenia</strong>, <strong>Matilda</strong>, <strong>David</strong>, <strong>Elisha</strong>, <strong>Peggy</strong>, and <strong>Tsitsi</strong>.</p>
 
@@ -93,19 +105,31 @@
 
         <h3>Ekenia (Born 1933)</h3>
         <p>Mother of <strong>Mejury</strong>, <strong>Raphael and Gabriel (twins)</strong>, <strong>Sarah (Jnr)</strong>, <strong>Chipo</strong>, <strong>Thandiwe</strong>, and <strong>Osward</strong>.</p>
-        <div class="photo-placeholder">[photo here]</div>
+        <div class="photo-placeholder">
+            <img src="ekenia-chihota.png" alt="Ekenia Chihota">
+            <br>Image of Ekenia Chihota
+        </div>
 
         <h3>Matilda (Born 1936)</h3>
         <p>Mother of <strong>Sinikiwe</strong>, <strong>Shepard</strong>, <strong>Bessy</strong>, <strong>David (Jnr)</strong>, and <strong>Absolom</strong> (twin).</p>
-        <div class="photo-placeholder">[photo here]</div>
+        <div class="photo-placeholder">
+            <img src="matilda-chihota.png" alt="Matilda Chihota">
+            <br>Image of Matilda Chihota
+        </div>
 
         <h3>David (Born 1942)</h3>
         <p>Father of <strong>Collen</strong>.</p>
-        <div class="photo-placeholder">[photo here]</div>
+        <div class="photo-placeholder">
+            <img src="david-chihota.png" alt="David Chihota">
+            <br>Image of David Chihota
+        </div>
 
         <h3>Elisha (Born 1945)</h3>
         <p>Married to <strong>Betty Chihota (née Tendayi)</strong>. Their children: <strong>Grenny</strong>, <strong>Hosea Jnr</strong>, <strong>Lyda</strong>, <strong>Caroline</strong>, <strong>Tariro</strong>, <strong>Ishmael</strong>, and <strong>Takunda</strong>.</p>
-        <div class="photo-placeholder">[photo here]</div>
+        <div class="photo-placeholder">
+            <img src="elisha-chihota.png" alt="Elisha Chihota">
+            <br>Image of Elisha Chihota
+        </div>
 
         <h3>Peggy (Born 1947)</h3>
         <p>Mother of <strong>Susan</strong>, <strong>Thomas</strong>, <strong>Allen</strong>, <strong>Memory</strong>, and <strong>Kundai</strong>.</p>
@@ -115,24 +139,56 @@
 
         <h2>Hosea & Sarah Family Pictures</h2>
 
-        <div class="photo-placeholder">[photo here]<br>(Front) Peggy, Elisha, Ekenia<br>(Back) Marakia, Matilda</div>
+        <div class="photo-placeholder">
+            <img src="elisha-and-sarah-first.png" alt="Hosea And Sarah First">
+            <br>(Front) Peggy, Elisha, Ekenia
+            <br>(Back) Marakia, Matilda
+        </div>
 
-        <div class="photo-placeholder">[photo here]<br>Peggy, David, Matilda and grandchildren</div>
+        <div class="photo-placeholder">
+            <img src="hosea-and-sarah-second.png" alt="Hosea And Sarah Second">
+            <br>Peggy, David, Matilda and grandchildren
+        </div>
 
-        <div class="photo-placeholder">[photo here]</div>
-        <div class="photo-placeholder">[photo here]</div>
-        <div class="photo-placeholder">[photo here]</div>
-        <div class="photo-placeholder">[photo here]</div>
-        <div class="photo-placeholder">[photo here]</div>
+        <div class="photo-placeholder">
+            <img src="vazukuru-first.png" alt="Vazukuru First">
+        </div>
+        <div class="photo-placeholder">
+            <img src="vazukuru-second.png" alt="Vazukuru Second">
+        </div>
+        <div class="photo-placeholder">
+            <img src="vazukuru-third.png" alt="Vazukuru Third">
+        </div>
+        <div class="photo-placeholder">
+            <img src="vazukuru-fourth.png" alt="Vazukuru Fourth">
+        </div>
+        <div class="photo-placeholder">
+           <img src="vazukuru-fifth.png" alt="Vazukuru Fifth">
+        </div>
+        <div class="photo-placeholder">
+            <img src="vazukuru-sixth.png" alt="Vazukuru Sixth">
+        </div>
+        <div class="photo-placeholder">
+            <img src="vazukuru-seventh.png" alt="Vazukuru Seventh">
+        </div>
+        <div class="photo-placeholder">
+            <img src="vazukuru-eighth.png" alt="Vazukuru Eighth">
+        </div>
 
         <h2>In Memory of Chirembe</h2>
 
-        <div class="photo-placeholder">[photo here]</div>
-        <div class="photo-placeholder">[photo here]</div>
+        <div class="photo-placeholder">
+            <img src="chiremba-grave-one.png" alt="Chiremba Grave One">
+        </div>
+        <div class="photo-placeholder">
+            <img src="chiremba-grave-two.png" alt="Chiremba Grave Two">
+            <br>Tombstone for Isaac Murengwe Chihota
+        </div>
+        
 
-        <h3>Tombstone for Isaac Murengwe Chihota (“Chiremba”)</h3>
-
-        <div class="photo-placeholder">[photo here]</div>
+        <div class="photo-placeholder">
+             <img src="tawana-chihota.png" alt="Tawana Chihota">
+        </div>
 
         <p><strong>Image:</strong> Reverend Mudenda (Methodist Church) and Chiremba’s great-grandchild <strong>Tawananyasha Chihota</strong> lighting a candle in remembrance of Isaac Murengwe Chihota.  
         The celebration marked <strong>100 years since his passing</strong>, with family gathering from far and wide for the unveiling of the tombstone.</p>
