Update image source for family picture

--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
         <h2>Hosea & Sarah Family Pictures</h2>
 
         <div class="photo-placeholder">
-            <img src="elisha-and-sarah-first.png" alt="Hosea And Sarah First">
+            <img src="hosea-and-sarah-first.png" alt="Hosea And Sarah First">
             <br>(Front) Peggy, Elisha, Ekenia
             <br>(Back) Marakia, Matilda
         </div>
