Remove 'Image of' prefix from photo captions

--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
         <div class="photo-placeholder">
             <img src="chiremba-and-family.png" alt="Chiremba and his family">
             <br>
-            Image of Chiremba and his family
+            Chiremba and his family
         </div>
 
         <p>His two sons <strong>David / Tirivai</strong> and <strong>Mugoniwa</strong> passed away during the influenza pandemic between 1915 and 1918. Their brother <strong>Jonas / Marimbi</strong> took in their children and relocated to Seke, where Chief Seke granted them land.</p>
@@ -87,7 +87,7 @@
         <div class="photo-placeholder">
             <img src="hosea-chihota-photo.png" alt="Hosea Chihota">
             <br>
-            Image of Hosea Chihota
+            Hosea Chihota
         </div>
 
 
@@ -97,7 +97,7 @@
 
         <div class="photo-placeholder">
             <img src="sarah-chihota.png" alt="Sarah Chihota">
-            <br>Image of Sarah Chihota
+            <br>Sarah Chihota
         </div>
 
         <p>Their first daughter <strong>Mazvirasa</strong> passed away at a young age. They later had six more children: <strong>Ekenia</strong>, <strong>Matilda</strong>, <strong>David</strong>, <strong>Elisha</strong>, <strong>Peggy</strong>, and <strong>Tsitsi</strong>.</p>
@@ -108,28 +108,28 @@
         <p>Mother of <strong>Mejury</strong>, <strong>Raphael and Gabriel (twins)</strong>, <strong>Sarah (Jnr)</strong>, <strong>Chipo</strong>, <strong>Thandiwe</strong>, and <strong>Osward</strong>.</p>
         <div class="photo-placeholder">
             <img src="ekenia-chihota.png" alt="Ekenia Chihota">
-            <br>Image of Ekenia Chihota
+            <br>Ekenia Chihota
         </div>
 
         <h3>Matilda (Born 1936)</h3>
         <p>Mother of <strong>Sinikiwe</strong>, <strong>Shepard</strong>, <strong>Bessy</strong>, <strong>David (Jnr)</strong>, and <strong>Absolom</strong> (twin).</p>
         <div class="photo-placeholder">
             <img src="matilda-chihota.png" alt="Matilda Chihota">
-            <br>Image of Matilda Chihota
+            <br>Matilda Chihota
         </div>
 
         <h3>David (Born 1942)</h3>
         <p>Father of <strong>Collen</strong>.</p>
         <div class="photo-placeholder">
             <img src="david-chihota.png" alt="David Chihota">
-            <br>Image of David Chihota
+            <br>David Chihota
         </div>
 
         <h3>Elisha (Born 1945)</h3>
         <p>Married to <strong>Betty Chihota (née Tendayi)</strong>. Their children: <strong>Grenny</strong>, <strong>Hosea Jnr</strong>, <strong>Lyda</strong>, <strong>Caroline</strong>, <strong>Tariro</strong>, <strong>Ishmael</strong>, and <strong>Takunda</strong>.</p>
         <div class="photo-placeholder">
             <img src="elisha-chihota.png" alt="Elisha Chihota">
-            <br>Image of Elisha Chihota
+            <br>Elisha Chihota
         </div>
 
         <h3>Peggy (Born 1947)</h3>
@@ -141,13 +141,13 @@
         <h2>Hosea & Sarah Family Pictures</h2>
 
         <div class="photo-placeholder">
-            <img src="hosea-and-sarah-first.png" alt="Hosea And Sarah First">
+            <img src="hosea-and-sarah-first.png" alt="Hosea And Sarah Family">
             <br>(Front) Peggy, Elisha, Ekenia
             <br>(Back) Marakia, Matilda
         </div>
 
         <div class="photo-placeholder">
-            <img src="hosea-and-sarah-second.png" alt="Hosea And Sarah Second">
+            <img src="hosea-and-sarah-second.png" alt="Hosea And Sarah Family">
             <br>Peggy, David, Matilda and grandchildren
         </div>
 
@@ -191,7 +191,7 @@
              <img src="tawana-chihota.png" alt="Tawana Chihota">
         </div>
 
-        <p><strong>Image:</strong> Reverend Mudenda (Methodist Church) and Chiremba’s great-grandchild <strong>Tawananyasha Chihota</strong> lighting a candle in remembrance of Isaac Murengwe Chihota.  
+        <p>Reverend Mudenda (Methodist Church) and Chiremba’s great-grandchild <strong>Tawananyasha Chihota</strong> lighting a candle in remembrance of Isaac Murengwe Chihota.  
         The celebration marked <strong>100 years since his passing</strong>, with family gathering from far and wide for the unveiling of the tombstone.</p>
 
     </div>
