Update birth year for Tsitsi

--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
         <h3>Peggy (Born 1947)</h3>
         <p>Mother of <strong>Susan</strong>, <strong>Thomas</strong>, <strong>Allen</strong>, <strong>Memory</strong>, and <strong>Kundai</strong>.</p>
 
-        <h3>Tsitsi (Born 19..)</h3>
+        <h3>Tsitsi (Born 1956)</h3>
         <p>Mother of <strong>Nyaradzai</strong>, <strong>Tarisai</strong>, <strong>Muneripi</strong>, <strong>Taurai</strong>, <strong>Simbisairudo</strong>, <strong>Tafaraneyi</strong>, and <strong>Anesu</strong>.</p>
 
         <h2>Hosea & Sarah Family Pictures</h2>
