--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@
             <img src="vazukuru-eighth.png" alt="Vazukuru Eighth">
         </div>
 
-        <h2>In Memory of Chirembe</h2>
+        <h2>In Memory of Chiremba</h2>
 
         <div class="photo-placeholder">
             <img src="chiremba-grave-one.png" alt="Chiremba Grave One">
