--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
         </div>
 
         <h3>David (Born 1942)</h3>
-        <p>Father of <strong>Collen</strong>.</p>
+        <p><strong>David</strong> was the fourth child of <strong>Hosea</strong> and <strong>Sarah<strong>. He was the father of <strong>Collen</strong>.</p>
         <div class="photo-placeholder">
             <img src="david-chihota.png" alt="David Chihota">
             <br>David Chihota
